--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,26 @@
+@import url('https://fonts.googleapis.com/css?family=Calligraffitti|Roboto');
+
+
 body {
-  background-color: #000;
+  background-color: #dbc9bf;
+}
+
+h2 {
+  font-family: 'Calligraffitti', cursive;
+  color: #875a66;
+}
+
+p {
+ font-family: 'Roboto', sans-serif;
+ color: #000;
+}
+
+.margtop {
+  margin-top: 50px;
+}
+
+.container-fluid {
+  margin: 50px;
 }
 
 .hidden {
@@ -10,28 +31,44 @@ body {
   display: block
 }
 
-.container-fluid {
-  margin-top: 50px;
-}
 .main {
   margin: 0 auto;
-  height: auto;
+  padding:0px;
+  background-color: #dbc9bf;
+  opacity: 1;
+  height: 250px;
+  text-align: center;
+  font-family: 'Roboto', sans-serif;
 }
 
-.b-main {
-
-}
-
-
-
-img {
+header {
+  padding: 20px 0px;
+  background: url('../img/flowtop.jpg') no-repeat bottom center;
   background-size: cover;
+  height: 150px;
+  opacity: 0.6;
 }
 
-.m-img {
-  width: 600px;
-  height: 300px;
+
+footer {
+  background: url('../img/flowbot.jpg') no-repeat top center;
+  background-size: cover;
+  height: 150px;
+  opacity: 0.6;
 }
+
+h5 {
+  color: #000;
+  font-family: 'Roboto', sans-serif;
+}
+
+a {
+  text-decoration: none;
+  font-weight: lighter;
+  font-style: italic;
+  color: #fff;
+}
+
 
 .side_nav {
     position: relative;
