redid format once again, removed aside. styling is needed - test colors

--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,17 @@
 body {
   background-color: yellow;
+
 }
 
 .container {
   background-color: #000;
   margin: auto;
+  height: auto;
   border: 2px solid #fff;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  align-content: center;
+  justify-content: center;
 }
 .jumbotron {
   background: url('../img/tinybus.jpeg') no-repeat center center;
@@ -23,23 +25,40 @@ body {
   font-family: courier;
 }
 
-.nav {
-  position: sticky;
-  width: 100%;
-  z-index: 1;
+nav {
+  position: fixed;
+  right: 0;
+  left: 0;
+  z-index: 1030;
 }
 
-.nav>li {
-  display: inline-block;
+.list-nav{
   width: 33%;
+  height: auto;
   text-align: center;
-}
-
-aside {
-
+  background-color: black;
 }
 
 .content {
-  background-color: #fff;
+background-color: #fff;
+}
 
+.port--view > ul li {
+  display: inline-block;
+  padding: 0% 5%;
+  background-color:
+}
+
+img {
+  width: 250px;
+  height: auto;
+}
+
+#port-sec > h1 {
+  text-align: center;
+}
+
+.hero {
+  background-image: url("../img/stars.jpg") no-repeat center center;
+  background-size: contain;
 }
